--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/junhan.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">OGADA</h1>
                         <hr class="star-light">
