--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <!--<div class="footer-col col-md-4">-->
+                    <div class="col-lg-12">
                         <h3>Location</h3>
                         <p>KAIST
                             <br>Daejeon, South Korea</p>
