--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/javascript">
-      var state = 0;
-      function ChangImage() {
-        if(state==0){
-          document.img2.src="img/junhan.png"
-          state = 0;
-        } else {
-          document.img2.src="img/jeonghyo.png"
-          state = 1;
-        }
+       var state = 0;
+       function ChangeImage() {
+          if(state==0){
+             document.img2.src="img/junhan.png"
+             state = 1;
+          } else {
+             document.img2.src="img/jeonghyo.png"
+             state = 0;
+          }
       }
     </script>
 </head>
