--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Start OGADA</h1>
+                        <h1 class="name">OGADA</h1>
                         <hr class="star-light">
                         <span class="skills">Ethereum based DApp - Crowd Sourcing Data Collecting for Deep Learning </span>
                     </div>
@@ -149,7 +149,7 @@
                     <p>OGADA is Ethereum based Crowd Sourcing Data Collecting DApp for Deep Learning</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>If you want to buy or sell data for deep learing, it is the perfect place!</p>
+                    <p>If you want to buy or sell data for deep learning, it is the perfect place!</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
