--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Task</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/logo.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">OGADA</h1>
                         <hr class="star-light">
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Task</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -227,12 +227,11 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Face Emotion Recognition</h2>
+                            <h2>Fingers</h2>
                             <hr class="star-primary">
                             <img src="img/jeonghyo.png" class="img-responsive img-centered" alt="">
-                            <p>Please select number that describe the emotion of face.</p>
-                            <p>1. Happy 2. Sad 3. Anger 4. Surprise</p>
-                            <p>5. Fear 6. Disgust 7. Neutural
+                            <p>How many fingers in this picture?</p>
+                            <p>0   1   2   3   4   5</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>SKTelecom</a>
@@ -243,7 +242,7 @@
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong>Face emotion recognition</a>
+                                    <strong>Number of Fingers</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -266,21 +265,23 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Face Emotion Recognition</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Please choose number that describe the emotion of face.</p>
+                            <p>1. Happy 2. Sad 3. Anger 4. Surprise</p>
+                            <p>5. Fear 6. Disgust 7. Neutural</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>SKTelecom
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>09.15.2018</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Face Emotion Recognition</a>
                                     </strong>
                                 </li>
                             </ul>
