minor image changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/logo.png" alt="">
+                    <img class="img-responsive" src="img/logo_rev.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">OGADA</h1>
                         <hr class="star-light">
@@ -229,7 +229,7 @@
                         <div class="modal-body">
                             <h2>Fingers</h2>
                             <hr class="star-primary">
-                            <img src="img/jeonghyo.png" class="img-responsive img-centered" alt="">
+                            <img src="img/0_0.png" class="img-responsive img-centered" alt="">
                             <p>How many fingers in this picture?</p>
                             <p>0   1   2   3   4   5</p>
                             <ul class="list-inline item-details">
@@ -267,7 +267,7 @@
                         <div class="modal-body">
                             <h2>Face Emotion Recognition</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <img src="img/junhan.png" class="img-responsive img-centered" alt="">
                             <p>Please choose number that describe the emotion of face.</p>
                             <p>1. Happy 2. Sad 3. Anger 4. Surprise</p>
                             <p>5. Fear 6. Disgust 7. Neutural</p>
