--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
           }
       }
     </script>
+    <script type="text/javascript">
+       var state = 0;
+       function ChangeFingermage() {
+          if(state==0){
+             document.img2.src="img/0_0.png"
+             state = 1;
+          } else if (state==1) {
+             document.img2.src="img/0_1.png"
+             state = 2;
+          } else {
+             document.img2.src="img/0_2.png"
+             state = 0;
+          }
+      }
+    </script>
 </head>
 
 <body id="page-top" class="index">
@@ -246,7 +261,8 @@
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>
+                            <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
+                            <button type="butoon" class="btn btn-default" conclick="ChangeFingermage()"><i class="fa fa-times"></i> Next</button>
                         </div>
                     </div>
                 </div>
