image change button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA v1.0</title>
+    <title>OGADA v0.1</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
     </script>
     <script type="text/javascript">
        var state = 0;
-       function ChangeFingermage() {
+       function ChangeFingerimage() {
           if(state==0){
              document.img2.src="img/0_0.png"
              state = 1;
@@ -262,7 +262,7 @@
                                 </li>
                             </ul>
                             <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
-                            <button type="butoon" class="btn btn-default" conclick="ChangeFingermage()"><i class="fa fa-times"></i> Next</button>
+                            <button type="button" class="btn btn-default" conclick="ChangeFingerimage()"><i class="fa fa-times"></i> Next</button>
                         </div>
                     </div>
                 </div>
