--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                 </li>
                             </ul>
                             <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
-                            <button type="button" class="btn btn-default" conclick="ChangeFingerimage()"><i class="fa fa-times"></i> Next</button>
+                            <button type="button" class="btn btn-default" onclick="ChangeFingerimage()"><i class="fa fa-times"></i> Next</button>
                         </div>
                     </div>
                 </div>
