button image change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA v0.0</title>
+    <title>OGADA v0.00</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -244,7 +244,7 @@
                         <div class="modal-body">
                             <h2>Fingers</h2>
                             <hr class="star-primary">
-                            <img src="img/0_0.png" class="img-responsive img-centered" alt="">
+                            <img src="img/0_0.png" class="img-responsive img-centered" alt="change" name="img2">
                             <p>How many fingers in this picture?</p>
                             <p>0   1   2   3   4   5</p>
                             <ul class="list-inline item-details">
@@ -262,7 +262,7 @@
                                 </li>
                             </ul>
                             <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
-                            <button type="button" class="btn btn-default" onclick="ChangeFingerimage()"><i class="fa fa-times"></i> Next</button>
+                            <img alt="change" src="img/button.png" name="next_button" onclick="ChangeFingerimage()">
                         </div>
                     </div>
                 </div>
