--- a/index.html
+++ b/index.html
@@ -246,7 +246,13 @@
                             <hr class="star-primary">
                             <img src="img/0_0.png" class="img-responsive img-centered" alt="change" name="img2">
                             <p>How many fingers in this picture?</p>
-                            <p>0   1   2   3   4   5</p>
+                            <!--<p>0   1   2   3   4   5</p>-->
+                            <img src="img/0.png" class="buttonlink" alt="change" name="button0">
+                            <img src="img/1.png" class="buttonlink" alt="change" name="button1">
+                            <img src="img/2.png" class="buttonlink" alt="change" name="button2">
+                            <img src="img/3.png" class="buttonlink" alt="change" name="button3">
+                            <img src="img/4.png" class="buttonlink" alt="change" name="button4">
+                            <img src="img/5.png" class="buttonlink" alt="change" name="button5">
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>SKTelecom</a>
