button click rev

--- a/index.html
+++ b/index.html
@@ -59,43 +59,43 @@
       var buttonstate=0;
       function ButtonChange(){
         if(buttonstate==0){
-          if(document.button0.src=="img/0.png"){
-            document.button0.src="img/0_click.png"
+          if(document.button.src=="img/0.png"){
+            document.button.src="img/0_click.png"
             buttonstate=1;
-          } else if (document.button1.src=="img/1.png"){
-            document.button1.src="img/1_click.png"
+          } else if (document.button.src=="img/1.png"){
+            document.button.src="img/1_click.png"
             buttonstate=1;
-          } else if (document.button2.src=="img/2.png"){
-            document.button2.src="img/2_click.png"
+          } else if (document.button.src=="img/2.png"){
+            document.button.src="img/2_click.png"
             buttonstate=1;
-          } else if (document.button3.src=="img/3.png"){
-            document.button3.src="img/3_click.png"
+          } else if (document.button.src=="img/3.png"){
+            document.button.src="img/3_click.png"
             buttonstate=1;
-          } else if (document.button4.src=="img/4.png"){
-            document.button4.src="img/4_click.png"
+          } else if (document.button.src=="img/4.png"){
+            document.button.src="img/4_click.png"
             buttonstate=1;
           } else{
-            document.button5.src="img/5_click.png"
+            document.button.src="img/5_click.png"
             buttonstate=1;
           }
         } else{
-          if(document.button0.src=="img/0_click.png"){
-            document.button0.src="img/0.png"
+          if(document.button.src=="img/0_click.png"){
+            document.button.src="img/0.png"
             buttonstate=0;
-          } else if (document.button1.src=="img/1_click.png"){
-            document.button1.src="img/1.png"
+          } else if (document.button.src=="img/1_click.png"){
+            document.button.src="img/1.png"
             buttonstate=0;
-          } else if (document.button2.src=="img/2_click.png"){
-            document.button2.src="img/2.png"
+          } else if (document.button.src=="img/2_click.png"){
+            document.button.src="img/2.png"
             buttonstate=0;
-          } else if (document.button3.src=="img/3_click.png"){
-            document.button2.src="img/3.png"
+          } else if (document.button.src=="img/3_click.png"){
+            document.button.src="img/3.png"
             buttonstate=0;
-          } else if (document.button4.src=="img/4_click.png"){
-            document.button3.src="img/4.png"
+          } else if (document.button.src=="img/4_click.png"){
+            document.button.src="img/4.png"
             buttonstate=0;
           } else{
-            document.button4.src="img/5.png"
+            document.button.src="img/5.png"
             buttonstate=0;
           }
         }
@@ -293,12 +293,12 @@
                             <img src="img/0_0.png" class="img-responsive img-centered" alt="change" name="img2">
                             <p>How many fingers in this picture?</p>
                             <!--<p>0   1   2   3   4   5</p>-->
-                            <img src="img/0.png" class="buttonlink" alt="change" name="button0" onclick="ButtonChange()">
-                            <img src="img/1.png" class="buttonlink" alt="change" name="button1" onclick="ButtonChange()">
-                            <img src="img/2.png" class="buttonlink" alt="change" name="button2" onclick="ButtonChange()">
-                            <img src="img/3.png" class="buttonlink" alt="change" name="button3" onclick="ButtonChange()">
-                            <img src="img/4.png" class="buttonlink" alt="change" name="button4" onclick="ButtonChange()">
-                            <img src="img/5.png" class="buttonlink" alt="change" name="button5" onclick="ButtonChange()">
+                            <img src="img/0.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/1.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/2.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/3.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/4.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/5.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>SKTelecom</a>
@@ -314,7 +314,7 @@
                                 </li>
                             </ul>
                             <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
-                            <img alt="change" src="img/button.png" name="next_button" onclick="ChangeFingerimage()">
+                            <img alt="change" src="img/button.png" name="next_button" onclick="ChangeFingerimage(); ButtonChange()">
                         </div>
                     </div>
                 </div>
