--- a/index.html
+++ b/index.html
@@ -56,51 +56,94 @@
       }
     </script>
     <script type="text/javascript">
-      var buttonstate=0;
-      function ButtonChange(){
-        if(buttonstate==0){
-          if(document.button.src=="img/0.png"){
-            document.button.src="img/0_click.png"
-            buttonstate=1;
-          } else if (document.button.src=="img/1.png"){
-            document.button.src="img/1_click.png"
-            buttonstate=1;
-          } else if (document.button.src=="img/2.png"){
-            document.button.src="img/2_click.png"
-            buttonstate=1;
-          } else if (document.button.src=="img/3.png"){
-            document.button.src="img/3_click.png"
-            buttonstate=1;
-          } else if (document.button.src=="img/4.png"){
-            document.button.src="img/4_click.png"
-            buttonstate=1;
-          } else{
-            document.button.src="img/5_click.png"
-            buttonstate=1;
+       var button0state = 0;
+       function ChangeButton0() {
+          if(button0state==0){
+             document.button0.src="img/0_click.png"
+             button0state = 1;
+          } else {
+             document.button0.src="img/0.png"
+             button0state = 0;
           }
-        } else{
-          if(document.button.src=="img/0_click.png"){
-            document.button.src="img/0.png"
-            buttonstate=0;
-          } else if (document.button.src=="img/1_click.png"){
-            document.button.src="img/1.png"
-            buttonstate=0;
-          } else if (document.button.src=="img/2_click.png"){
-            document.button.src="img/2.png"
-            buttonstate=0;
-          } else if (document.button.src=="img/3_click.png"){
-            document.button.src="img/3.png"
-            buttonstate=0;
-          } else if (document.button.src=="img/4_click.png"){
-            document.button.src="img/4.png"
-            buttonstate=0;
-          } else{
-            document.button.src="img/5.png"
-            buttonstate=0;
-          }
-        }
       }
     </script>
+    <script type="text/javascript">
+       var button1state = 0;
+       function ChangeButton1() {
+          if(button1state==0){
+             document.button0.src="img/1_click.png"
+             button1state = 1;
+          } else {
+             document.button1.src="img/1.png"
+             button1state = 0;
+          }
+      }
+    </script>
+    <script type="text/javascript">
+       var button2state = 0;
+       function Change2Button0() {
+          if(button2state==0){
+             document.button2.src="img/2_click.png"
+             button2state = 1;
+          } else {
+             document.button2.src="img/2.png"
+             button2state = 0;
+          }
+      }
+    </script>
+    <script type="text/javascript">
+       var button3state = 0;
+       function ChangeButton3() {
+          if(button3state==0){
+             document.button3.src="img/3_click.png"
+             button3state = 1;
+          } else {
+             document.button3.src="img/3.png"
+             button3state = 0;
+          }
+      }
+    </script>
+    <script type="text/javascript">
+       var button4state = 0;
+       function ChangeButton4() {
+          if(button4state==0){
+             document.button4.src="img/4_click.png"
+             button4state = 1;
+          } else {
+             document.button4.src="img/4.png"
+             button4state = 0;
+          }
+      }
+    </script>
+    <script type="text/javascript">
+       var button5state = 0;
+       function ChangeButton5() {
+          if(button5state==0){
+             document.button5.src="img/5_click.png"
+             button5state = 1;
+          } else {
+             document.button5.src="img/5.png"
+             button5state = 0;
+          }
+      }
+    </script>
+    <script type="text/javascript">
+       function ResetButton() {
+         document.button0.src="img/0.png"
+         document.button1.src="img/1.png"
+         document.button2.src="img/2.png"
+         document.button3.src="img/3.png"
+         document.button4.src="img/4.png"
+         document.button5.src="img/5.png"
+         button0state = 0;
+         button1state = 0;
+         button2state = 0;
+         button3state = 0;
+         button4state = 0;
+         button5state = 0;
+      }
+    </script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -293,12 +336,12 @@
                             <img src="img/0_0.png" class="img-responsive img-centered" alt="change" name="img2">
                             <p>How many fingers in this picture?</p>
                             <!--<p>0   1   2   3   4   5</p>-->
-                            <img src="img/0.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
-                            <img src="img/1.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
-                            <img src="img/2.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
-                            <img src="img/3.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
-                            <img src="img/4.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
-                            <img src="img/5.png" class="buttonlink" alt="change" name="button" onclick="ButtonChange()">
+                            <img src="img/0.png" class="buttonlink" alt="change" name="button0" onclick="ChangeButton0()">
+                            <img src="img/1.png" class="buttonlink" alt="change" name="button1" onclick="ChangeButton1()">
+                            <img src="img/2.png" class="buttonlink" alt="change" name="button2" onclick="ChangeButton2()">
+                            <img src="img/3.png" class="buttonlink" alt="change" name="button3" onclick="ChangeButton3()">
+                            <img src="img/4.png" class="buttonlink" alt="change" name="button4" onclick="ChangeButton4()">
+                            <img src="img/5.png" class="buttonlink" alt="change" name="button5" onclick="ChangeButton5()">
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong>SKTelecom</a>
@@ -314,7 +357,7 @@
                                 </li>
                             </ul>
                             <!--<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Next</button>-->
-                            <img alt="change" src="img/button.png" name="next_button" onclick="ChangeFingerimage(); ButtonChange()">
+                            <img alt="change" src="img/button.png" name="next_button" onclick="ChangeFingerimage(); ResetButton()">
                         </div>
                     </div>
                 </div>
