--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA vv</title>
+    <title>OGADA vvv</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
        var button1state = 0;
        function ChangeButton1() {
           if(button1state==0){
-             document.button0.src="img/1_click.png"
+             document.button1.src="img/1_click.png"
              button1state = 1;
           } else {
              document.button1.src="img/1.png"
