--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </script>
     <script type="text/javascript">
        var button2state = 0;
-       function Change2Button0() {
+       function ChangeButton2() {
           if(button2state==0){
              document.button2.src="img/2_click.png"
              button2state = 1;
