--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       }
     </script>
     <script type="text/javascript">
-       var state = 0;
+       var fingerstate = 0;
        function ChangeFingerimage() {
-          if(state==0){
-             document.img2.src="img/0_0.png"
-             state = 1;
-          } else if (state==1) {
+          if(fingerstate==0){
              document.img2.src="img/0_1.png"
-             state = 2;
-          } else {
+             fingerstate = 1;
+          } else if (fingerstate==1) {
              document.img2.src="img/0_2.png"
-             state = 0;
+             fingerstate = 2;
+          } else {
+             document.img2.src="img/0_0.png"
+             fingerstate = 0;
           }
       }
     </script>
