finish button create

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA vvv</title>
+    <title>OGADA</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -50,8 +50,9 @@
              document.img2.src="img/0_2.png"
              fingerstate = 2;
           } else {
-             document.img2.src="img/0_0.png"
-             fingerstate = 0;
+             document.img2.src="img/savecoin.png"
+             document.next_button.src="img/finish.png"
+             fingerstate = 3;
           }
       }
     </script>
