--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA</title>
+    <title>OGADA a</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,10 +49,11 @@
           } else if (fingerstate==1) {
              document.img2.src="img/0_2.png"
              fingerstate = 2;
-          } else {
+          } else if (fingerstate==2){
              document.img2.src="img/savecoin.png"
-             document.next_button.src="img/finish.png"
+             document.setAttribute("data-dismiss","modal")
              fingerstate = 3;
+          } else {
           }
       }
     </script>
