--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA a</title>
+    <title>OGADA ab</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,8 @@
              fingerstate = 2;
           } else if (fingerstate==2){
              document.img2.src="img/savecoin.png"
-             document.setAttribute("data-dismiss","modal")
+             document.next_button.setAttribute("src", "img/finish.png")
+             document.next_button.setAttribute("data-dismiss","modal")
              fingerstate = 3;
           } else {
           }
