button remove test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA abc</title>
+    <title>OGADA abcd</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,6 +52,7 @@
           } else if (fingerstate==2){
              document.img2.src="img/savecoin.png"
              document.next_button.setAttribute("src", "img/finish.png")
+             document.button0.setAttribute("src", "//:0")
              fingerstate = 3;
           } else {
              document.next_button.setAttribute("data-dismiss","modal")
