test writing file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>OGADA write</title>
+    <title>OGADA a</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <script type="text/javascript">
        function writeFile(name, msg) {
          if(name=="")return false;
-         var defaultpath = "log";
+         var defaultpath = "C:\\Users\\wjdgy\\ogada\\log";
          var fileObject = new ActiveXObject("Scripting. FileSystemObject");
          var fullpath=defaultpath+"\\"+name;
          //if there are no file in directory, create.
